[package]
edition = "2021"
name = "reflink"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
copy_on_write = "0.1.3"
futures = "0.3.31"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
napi-derive = "2.16.12"
pipe-trait = "0.4.0"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
